--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "adsbviewer-node",
-  "version": "1.2.0",
-  "description": "ADSB aircraft viewer - Node/Express web app with routes, weather, and FL labels",
+  "version": "2.0.0",
+  "description": "ADSB aircraft viewer - Node/Express web app with routes, weather, FL labels, and OpenSky static routes",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "axios": "^1.7.9",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.2"
   }
 }
